# nGOT-sprints

./: .gitignore  README.md  TECHNICAL_REPORT.md
eta-predictor/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
eta-predictor/.dvc/: config
eta-predictor/app/: main.py  predictor.py  schemas.py
eta-predictor/scripts/: first_mlflow_run.py  generate_data.py  preprocess.py  train.py
eta-predictor/tests/: test_api.py  test_schemas.py
medical-rag/: .gitignore  README.md  pyproject.toml
medical-rag/app/: main.py  rag_engine.py  schemas.py
medical-rag/configs/: index_config.json
medical-rag/data/medical/: diabetes_management.txt  hypertension_guidelines.txt  malaria_guidelines.txt
medical-rag/metrics/: rag_evaluation.json
medical-rag/scripts/: create_knowledge_base.py  evaluate.py  ingest.py
medical-rag/tests/: rag_test.py
product-recommander/: README.md  pyproject.toml
product-recommander/app/: main.py  recommender.py  schemas.py
product-recommander/data/: products.json
product-recommander/scripts/: create_catalogue.py  index_products.py
product-recommander/tests/: test_recommander.py
