[project]
name = "product-recommander"
version = "0.1.0"
description = ""
authors = [
    {name = "emmanuelziggah",email = "ziggahemmanuel99@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai (>=2.33.0,<3.0.0)",
    "pinecone-client (>=6.0.0,<7.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pinecone (>=8.1.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)"
]
